# PhysGenLoop-

./: .env.example  .gitattributes  .gitignore  README.md  __init__.py  __main__.py  e2e_loop_full.py  physics_rules.py  pipeline.py  pyproject.toml  question_generator.py  requirements.txt  tracker.py  vlm_verifier.py
Blender_video/: README.md  manifest.json  run_all.ps1  run_cloud_shard.sh  run_continuation_stage.sh  run_training_stage.sh
Blender_video/scripts/: build_action_value_release.py  cleanup_repair_campaign.py  cleanup_repair_v3_shards.py  generate_repair_shard.py  generate_scenes.py  handoff_repair_v3_node_b.sh  monitor_repair_campaign.py  prepare_continued_campaign.py  (+4 more)
SAM2_video/: BATCH_GENERATION_PROMPT.md  README.md  run_pipeline.ps1
agents/: README.md  __init__.py  prompt_rewriter.py  repairer.py  video_backend.py
benchmarks/: build_prompt_diagnostics.py  diagnose_pavg_predictions.py  evaluate_critic.py  evaluate_video_benchmark.py  intphys2_zeroshot_baseline.py  monitor_video_benchmark.py  prepare_videophy_manifest.py  report_full_pavg_critic.py  report_full_video_benchmark.py
configs/: default.yaml  loop.yaml  loop_v2.yaml  loop_v2_relaxed_no_coverage.yaml  repair_agent.yaml
docs/: learning-repair-agent.md  operation-guide.md
evaluation/: external_manifest.json
examples/: critic_request.json  evaluate_video.py  learning_repair_cloud_backend_template.py  observations.json  repair_training_manifest.jsonl  validate_pipeline_trace.py
generators/: __init__.py  hunyuan_probe.py  wan_generator.py
prompts/: 0002.txt  0004.txt  0011.txt  0013.txt  0014.txt  0015.txt
schemas/: README.md  critic_output.schema.json  critic_trace.schema.json  generator_request.schema.json  loop_trace_v2.schema.json  mask_manifest_v2.schema.json  repair_sample.schema.json  sample.schema.json  wan_repair_trial_v2.schema.json  wan_repair_trial_v3.schema.json
tests/: test_api_models.py  test_checklist.py  test_evaluate_video_example.py  test_evaluation.py  test_evidence_fusion.py  test_execution_trace.py  test_foundation.py  test_learning_repair.py  test_learning_repair_pipeline.py  test_loop_contracts.py  test_loop_controller.py  test_mechanics.py  test_observe_video.py  test_package.py  test_pipeline_artifacts.py  test_pipeline_trace.py  test_planner.py  test_pqsg.py  test_provider_resilience.py  test_repairer.py  test_rule_baseline.py  test_sam2_detector.py  test_schemas.py  test_trace_validator_cli.py  test_tracker.py  test_vlm_verifier.py
tools/: connect_physgenloop_server.ps1  physgenloop_remote.py  remote_apply_full_chain_plan.py  remote_harden_memory_handoff.py
(+310 files in other folders)
