[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pavg-critic"
version = "0.3.0"
description = "Evidence-grounded physics critic for generated videos"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.20,<5",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
video = [
  "numpy>=1.24",
  "opencv-python>=4.9",
]
test = ["pytest>=8,<9"]

[project.scripts]
pavg-critic = "pavg_critic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
